[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muzaic-mcp"
version = "1.0.0"
description = "Official MCP server for Muzaic AI — generate custom music for video content"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Muzaic", email = "support@muzaic.ai" },
]
keywords = [
    "mcp",
    "muzaic",
    "ai-music",
    "music-generation",
    "video",
    "soundtrack",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
muzaic-mcp = "muzaic_mcp.server:main"

[project.urls]
Homepage = "https://muzaic.ai"
Documentation = "https://docs.muzaic.ai"
Repository = "https://github.com/muzaic-ai/muzaic-mcp"
Issues = "https://github.com/muzaic-ai/muzaic-mcp/issues"
Changelog = "https://github.com/muzaic-ai/muzaic-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["muzaic_mcp"]
